examples/test/testpolicy13912.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13912
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key3: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value18
          key48: value10
      podSelector:
        matchLabels:
          key23: value27
          key0: value24
          key21: value43
